--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.5",
+    "@mui/material-nextjs": "^6.1.7",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "install": "^0.13.0",
