--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.13.5",
     "@mui/material-nextjs": "^6.1.7",
     "@types/d3": "^7.4.3",
+    "cross-spawn": "^7.0.6",
     "d3": "^7.9.0",
     "install": "^0.13.0",
     "next": "15.0.3",
