--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.0.3",
     "npm": "^10.9.0",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
