--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cross-spawn": "^7.0.6",
     "d3": "^7.9.0",
     "install": "^0.13.0",
-    "next": "15.0.3",
+    "next": "^14.2.18",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
