--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@mui/material-nextjs": "^6.1.7",
-    "@types/d3": "^7.4.3",
     "cross-spawn": "^7.0.6",
+    "dagre": "^0.8.5",
     "install": "^0.13.0",
     "next": "^14.2.18",
     "npm": "^10.9.0",
     "react": "^18.3.1",
-    "react-d3-tree": "^3.6.2",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
