--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
