--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/dagre": "^0.7.52",
