build: add firebase

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@mui/material-nextjs": "^6.1.7",
     "cross-spawn": "^7.0.6",
     "dagre": "^0.8.5",
+    "firebase": "^11.0.2",
     "install": "^0.13.0",
     "next": "^14.2.18",
     "npm": "^10.9.0",
